scripts/nullness/nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8.txt
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Status.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: status
    public Status() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Request.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: method, url, protocol
    public Request() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Method.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: method
    public Method() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Url.java:9: error: [initialization.fields.uninitialized] the constructor does not initialize fields: path, extension
    public Url() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Protocol.java:9: error: [initialization.fields.uninitialized] the constructor does not initialize fields: protocol, version
    public Protocol() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Path.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: path
    public Path() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Extension.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: extension
    public Extension() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:13: error: [initialization.fields.uninitialized] the constructor does not initialize fields: date
    public Date() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:31: error: [return] incompatible types in return.
        return format;
               ^
  type of expression: @Initialized @Nullable SimpleDateFormat
  method return type: @Initialized @NonNull SimpleDateFormat
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:45: error: [dereference.of.nullable] dereference of possibly-null reference format
        return "[" + format.format(date.getTime()) + "]";
                     ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/Record.java:21: error: [initialization.fields.uninitialized] the constructor does not initialize fields: userIp, userTime, request, userStatus, size
    public Record() {
           ^
../nullgtn/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/forFile/Reader.java:23: error: [return] incompatible types in return.
            return null;
                   ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull String
12 errors
